<?xml version="1.0"?>
<package format="3">
  <name>file_server2</name>
  <version>1.0.0</version>
  <description>The file server package</description>

  <maintainer email="emre.cakal@siemens.com">Mehmet Emre Cakal</maintainer>

  <license>Apache License, Version 2.0</license>

  <!-- No URL tags included -->

  <author email="martin.bischoff@siemens.com">Martin Bischoff</author>
  <author email="emre.cakal@siemens.com">Mehmet Emre Cakal</author>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>rclcpp</build_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- export tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
